# mojo-gpu-puzzles

./: .gitignore  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
book/src/: SUMMARY.md  howto.md  introduction.md  robots.txt
book/src/bonuses/: part4.md
book/src/puzzle_01/: layout_tensor_preview.md  puzzle_01.md  puzzle_01_viz.py  raw.md
book/src/puzzle_02/: puzzle_02.md  puzzle_02_viz.py
book/src/puzzle_03/: puzzle_03.md  puzzle_03_viz.py
book/src/puzzle_04/: introduction_layout_tensor.md  layout_tensor.md  puzzle_04.md  puzzle_04_viz.py  raw.md  thread_indexing_viz.py
book/theme/: head.hbs  index.hbs
problems/p01/: p01.mojo
problems/p02/: p02.mojo
problems/p03/: p03.mojo
problems/p04/: p04.mojo  p04_layout_tensor.mojo
problems/p05/: p05.mojo  p05_layout_tensor.mojo
problems/p06/: p06.mojo
problems/p07/: p07.mojo  p07_layout_tensor.mojo
problems/p08/: p08.mojo  p08_layout_tensor.mojo
problems/p09/: p09.mojo  p09_layout_tensor.mojo
problems/p10/: p10.mojo  p10_layout_tensor.mojo
problems/p11/: p11.mojo  p11_layout_tensor.mojo
problems/p12/: p12.mojo  p12_layout_tensor.mojo
problems/p13/: p13.mojo
problems/p14/: p14.mojo
problems/p16/: p16.mojo
problems/p17/: p17.py
problems/p18/: p18.py
problems/p19/: p19.py
problems/p20/: p20.mojo  p20.py
problems/p21/: p21.mojo  p21.py
problems/p22/: p22.mojo
problems/p23/: p23.mojo
problems/p24/: p24.mojo
problems/p25/: p25.mojo
problems/p26/: p26.mojo
problems/p27/: p27.mojo
problems/p29/: p29.mojo
problems/p30/: p30.mojo
solutions/: run.sh  sanitizer.sh
solutions/p01/: p01.mojo
solutions/p02/: p02.mojo
solutions/p03/: p03.mojo
solutions/p04/: p04.mojo  p04_layout_tensor.mojo
solutions/p05/: p05.mojo  p05_layout_tensor.mojo
solutions/p06/: p06.mojo
solutions/p07/: p07.mojo  p07_layout_tensor.mojo
solutions/p08/: p08.mojo  p08_layout_tensor.mojo
solutions/p09/: p09_layout_tensor.mojo
solutions/p10/: p10.mojo  p10_layout_tensor.mojo
solutions/p11/: p11.mojo
solutions/p12/: p12.mojo  p12_layout_tensor.mojo
solutions/p13/: p13.mojo
solutions/p14/: p14.mojo
solutions/p15/: p15.py
solutions/p16/: p16.mojo  p16.py
solutions/p18/: p18.py
solutions/p19/: p19.py
solutions/p20/: p20.mojo  p20.py
solutions/p21/: p21.mojo  p21.py
solutions/p22/: p22.mojo
solutions/p23/: p23.mojo
solutions/p24/: p24.mojo
solutions/p25/: p25.mojo
solutions/p26/: p26.mojo
solutions/p27/: p27.mojo
solutions/p28/: p28.mojo
solutions/p29/: p29.mojo
solutions/p30/: p20.mojo
solutions/p31/: p21.mojo
(+149 files in other folders)
